fix: made hero buttons clickable when visible

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -107,6 +107,7 @@ nav {
   align-items: center;
   justify-content: space-between;
   grid-area: bar;
+  z-index: 12;
 }
 .one {
   padding-left: 10%;
